# Recomendacao-Por-Imagem

./: README.md  app.py  config.py  feature_extraction.py  image_ids.json  pyproject.toml  requirements.txt  similarity_search.py  vercel.json
routes/: main.py  similarity.py
static/css/: style.css
static/js/: filtro.js  galeria_de_imagens.js
templates/: index.html
