[tool.poetry]
name = "recomendacao-por-imagem"
version = "0.1.0"
description = ""
authors = ["Miguel de Moraes Bastos <miguel.bastos@trf1.jus.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
requests = "^2.32.3"
pandas = "^2.2.3"
faiss-cpu = "^1.9.0.post1"
torch = "^2.6.0"
transformers = "^4.48.1"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
